--- a/app/src/main/res/layout/fragment_select_mode.xml
+++ b/app/src/main/res/layout/fragment_select_mode.xml
@@ -11,23 +11,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select Mode"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#000"
         android:textSize="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/mode_spinner"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="20dp"/>
 
     <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
         android:id="@+id/mode_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:textColor="@color/colorPrimary"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/mode_next"
-        app:layout_constraintTop_toBottomOf="@+id/mode_header" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/mode_next"
@@ -37,6 +38,7 @@
         android:text="Next"
         android:textColor="@color/colorPrimary"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
