--- a/app/src/main/res/layout/fragment_set_todo_title.xml
+++ b/app/src/main/res/layout/fragment_set_todo_title.xml
@@ -1,46 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.ToDo.TodoCreate.Fragment.SelectDueDateFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/date_text"
+        android:id="@+id/set_todo_title_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="Select Due Date"
+        android:text="Set ToDo Title"
         android:textColor="#000"
-        android:textStyle="bold"
         android:textSize="35dp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="70dp"
         android:layout_marginLeft="20dp"/>
 
-    <com.applandeo.materialcalendarview.CalendarView
-        android:id="@+id/due_calendar"
+    <EditText
+        android:id="@+id/set_todo_title_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:type="one_day_picker"
-        app:headerColor="#fff"
-        app:headerLabelColor="#000"
-        app:previousButtonSrc="@drawable/baseline_keyboard_arrow_left_24"
-        app:forwardButtonSrc="@drawable/baseline_keyboard_arrow_right_24"
-        app:selectionColor="@color/colorPrimary"
+        android:textSize="30dp"
+        android:textColor="@color/colorPrimary"
+        android:hint="Title"
+        app:layout_constraintTop_toBottomOf="@id/set_todo_title_header"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_goneMarginRight="32dp"
-        app:layout_goneMarginLeft="32dp"/>
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"/>
 
     <TextView
-        android:id="@+id/date_next"
+        android:id="@+id/set_todo_title_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
