--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -51,6 +51,7 @@
         app:layout_constraintTop_toBottomOf="@id/login_text" />
 
     <EditText
+        android:inputType="textPassword"
         android:id="@+id/signin_password_input"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
