--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -35,40 +35,40 @@
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
-                        <View
-                            android:id="@+id/second_grade_profile"
-                            android:layout_width="70dp"
-                            android:layout_height="70dp"
-                            android:background="@drawable/user_profile"
-                            app:layout_constraintBottom_toTopOf="@+id/ranker_guideline"/>
+                        <!--<View-->
+                            <!--android:id="@+id/second_grade_profile"-->
+                            <!--android:layout_width="70dp"-->
+                            <!--android:layout_height="70dp"-->
+                            <!--android:background="@drawable/user_profile"-->
+                            <!--app:layout_constraintBottom_toTopOf="@+id/ranker_guideline"/>-->
 
-                        <TextView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:background="@drawable/leader_board_rank"
-                            android:gravity="center"
-                            android:text="2"
-                            android:textColor="#fff"
-                            app:layout_constraintBottom_toBottomOf="@id/second_grade_profile"
-                            app:layout_constraintEnd_toEndOf="@+id/second_grade_profile" />
+                        <!--<TextView-->
+                            <!--android:layout_width="30dp"-->
+                            <!--android:layout_height="30dp"-->
+                            <!--android:background="@drawable/leader_board_rank"-->
+                            <!--android:gravity="center"-->
+                            <!--android:text="2"-->
+                            <!--android:textColor="#fff"-->
+                            <!--app:layout_constraintBottom_toBottomOf="@id/second_grade_profile"-->
+                            <!--app:layout_constraintEnd_toEndOf="@+id/second_grade_profile" />-->
 
-                        <View
-                            android:id="@+id/third_grade_profile"
-                            android:layout_width="70dp"
-                            android:layout_height="70dp"
-                            android:background="@drawable/user_profile"
-                            app:layout_constraintBottom_toTopOf="@+id/ranker_guideline"
-                            app:layout_constraintRight_toRightOf="parent" />
+                        <!--<View-->
+                            <!--android:id="@+id/third_grade_profile"-->
+                            <!--android:layout_width="70dp"-->
+                            <!--android:layout_height="70dp"-->
+                            <!--android:background="@drawable/user_profile"-->
+                            <!--app:layout_constraintBottom_toTopOf="@+id/ranker_guideline"-->
+                            <!--app:layout_constraintRight_toRightOf="parent" />-->
 
-                        <TextView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:background="@drawable/leader_board_rank"
-                            android:gravity="center"
-                            android:text="3"
-                            android:textColor="#fff"
-                            app:layout_constraintBottom_toBottomOf="@id/third_grade_profile"
-                            app:layout_constraintEnd_toEndOf="@+id/third_grade_profile" />
+                        <!--<TextView-->
+                            <!--android:layout_width="30dp"-->
+                            <!--android:layout_height="30dp"-->
+                            <!--android:background="@drawable/leader_board_rank"-->
+                            <!--android:gravity="center"-->
+                            <!--android:text="3"-->
+                            <!--android:textColor="#fff"-->
+                            <!--app:layout_constraintBottom_toBottomOf="@id/third_grade_profile"-->
+                            <!--app:layout_constraintEnd_toEndOf="@+id/third_grade_profile" />-->
 
                         <View
                             android:id="@+id/first_grade_profile"
@@ -80,8 +80,8 @@
                             app:layout_constraintRight_toRightOf="parent"/>
 
                         <TextView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="96dp"
+                            android:layout_height="96dp"
                             android:background="@drawable/leader_board_rank"
                             android:gravity="center"
                             android:text="1"
@@ -96,23 +96,23 @@
                             android:orientation="horizontal"
                             app:layout_constraintGuide_begin="96dp" />
 
-                        <TextView
-                            android:id="@+id/second_grade_user"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="lewis"
-                            android:textSize="20dp"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:layout_marginTop="10dp"
-                            app:layout_constraintTop_toBottomOf="@+id/second_grade_profile"
-                            app:layout_constraintLeft_toLeftOf="@+id/second_grade_profile"
-                            app:layout_constraintRight_toRightOf="@id/second_grade_profile" />
+                        <!--<TextView-->
+                            <!--android:id="@+id/second_grade_user"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="lewis"-->
+                            <!--android:textSize="20dp"-->
+                            <!--android:textColor="@color/colorPrimaryDark"-->
+                            <!--android:layout_marginTop="10dp"-->
+                            <!--app:layout_constraintTop_toBottomOf="@+id/second_grade_profile"-->
+                            <!--app:layout_constraintLeft_toLeftOf="@+id/second_grade_profile"-->
+                            <!--app:layout_constraintRight_toRightOf="@id/second_grade_profile" />-->
 
                         <TextView
                             android:id="@+id/first_grade_user"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="lewis"
+                            android:text="woopa"
                             android:textSize="20dp"
                             android:textColor="@color/colorPrimaryDark"
                             android:layout_marginTop="10dp"
@@ -120,17 +120,17 @@
                             app:layout_constraintLeft_toLeftOf="@+id/first_grade_profile"
                             app:layout_constraintRight_toRightOf="@id/first_grade_profile"/>
 
-                        <TextView
-                            android:id="@+id/third_grade_user"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="lewis"
-                            android:textSize="20dp"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:layout_marginTop="10dp"
-                            app:layout_constraintTop_toBottomOf="@+id/third_grade_profile"
-                            app:layout_constraintLeft_toLeftOf="@+id/third_grade_profile"
-                            app:layout_constraintRight_toRightOf="@id/third_grade_profile"/>
+                        <!--<TextView-->
+                            <!--android:id="@+id/third_grade_user"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="lewis"-->
+                            <!--android:textSize="20dp"-->
+                            <!--android:textColor="@color/colorPrimaryDark"-->
+                            <!--android:layout_marginTop="10dp"-->
+                            <!--app:layout_constraintTop_toBottomOf="@+id/third_grade_profile"-->
+                            <!--app:layout_constraintLeft_toLeftOf="@+id/third_grade_profile"-->
+                            <!--app:layout_constraintRight_toRightOf="@id/third_grade_profile"/>-->
 
                     </android.support.constraint.ConstraintLayout>
 
@@ -186,7 +186,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="50dp"
-                            android:text="#23"
+                            android:text="#1"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/my_rank_rank_title"/>
 
@@ -195,7 +195,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="50dp"
-                            android:text="1260p"
+                            android:text="0p"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/my_rank_total_title"/>
@@ -205,7 +205,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="50dp"
-                            android:text="8%"
+                            android:text="0%"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/my_rank_top_title"/>
 
