--- a/app/src/main/res/layout/view_drawerheader.xml
+++ b/app/src/main/res/layout/view_drawerheader.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:text="asdf"
+            android:text="woopa"
             android:textColor="#fff"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
