--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -99,14 +99,15 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="20dp"
-            android:text="Total           earend, good!"
+            android:text="Total             earend, good!"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/item_timeline_thirdline_int" />
 
         <TextView
+            android:textAlignment="center"
             android:id="@+id/item_timeline_total_point"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="90dp"
             android:layout_marginTop="20dp"
