--- a/app/src/main/res/layout/fragment_modify_todo.xml
+++ b/app/src/main/res/layout/fragment_modify_todo.xml
@@ -7,54 +7,29 @@
     tools:context=".UI.ToDo.TodoCreate.Fragment.ModifyTodoFragment">
 
     <TextView
+        android:id="@+id/modify_todo_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30dp"
         android:textStyle="bold"
         android:textColor="#000"
-        android:text="Edit"
+        android:text="Edit Todo Title"
         android:layout_marginTop="70dp"
         android:layout_marginLeft="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
-        android:id="@+id/modify_text"
-        android:inputType="textNoSuggestions"
+        android:id="@+id/modify_todo_title_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30dp"
-        android:hint="Input Text"
         android:textColor="@color/colorPrimary"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:hint="Title"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="100dp"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/todo_modify_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/modify_text"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
-
-    <TextView
-        android:id="@+id/modify_add_milestone"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:drawableLeft="@drawable/baseline_add_black_24"
-        android:text="Add Milestone"
-        android:textSize="16dp"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/todo_modify_recycler_view"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"/>
 
     <TextView
         android:id="@+id/modify_finish"
